# AegisPQ

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  STATUS.md  THREAT_MODEL.md  deny.toml
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  fuzz.yml  publish.yml  release.yml  supply-chain.yml
crates/aegispq/: Cargo.toml
crates/aegispq-api/: Cargo.toml
crates/aegispq-api/src/: encrypt.rs  error.rs  identity.rs  lib.rs  sign.rs  types.rs
crates/aegispq-api/tests/: frozen_vectors.rs  integration.rs
crates/aegispq-cli/: Cargo.toml  build.rs
crates/aegispq-cli/src/: main.rs
crates/aegispq-cli/tests/: cli.rs
crates/aegispq-core/: Cargo.toml
crates/aegispq-core/src/: aead.rs  error.rs  hash.rs  kdf.rs  kem.rs  lib.rs  nonce.rs  sig.rs
crates/aegispq-protocol/: Cargo.toml
crates/aegispq-protocol/src/: envelope.rs  error.rs  file.rs  identity.rs  lib.rs  padding.rs  revocation.rs  rotation.rs
crates/aegispq-protocol/tests/: frozen_vectors.rs  generate_fuzz_seeds.rs  property_tests.rs  wire_format_compat.rs
crates/aegispq-protocol/tests/vectors/v1/: README.md
crates/aegispq-store/: Cargo.toml
crates/aegispq-store/src/: error.rs  fs.rs  keystore.rs  lib.rs  record.rs
crates/aegispq-store/tests/: compat_tests.rs
crates/aegispq/benches/: crypto_bench.rs
crates/aegispq/src/: lib.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  COMPATIBILITY.md  QUICKSTART.md  VERIFYING_RELEASES.md
docs/assets/: README.md
examples/: 01-alice-bob-exchange.sh  02-group-encryption.sh  03-rotation-after-compromise.sh  basic_usage.rs
fuzz/: Cargo.toml
fuzz/corpus/fuzz_decrypt/: huge_payload_claim  small_payload  xchacha_stub
fuzz/corpus/fuzz_envelope/: bad_magic  future_version  just_magic  truncated_5  truncated_8  unknown_format  unknown_suite  valid_header
fuzz/corpus/fuzz_extract_sender/: header_with_payload_claim
fuzz/corpus/fuzz_key_package/: bad_magic  header_only  trailing_data  truncated_half  valid  wrong_format_type
fuzz/corpus/fuzz_record/: contact_magic_only  contact_stub  identity_magic_only  identity_stub
fuzz/corpus/fuzz_revocation/: header_only  invalid_reason  trailing_data  truncated_half  valid
fuzz/corpus/fuzz_rotation/: header_only  trailing_data  truncated_half  truncated_quarter
fuzz/corpus/fuzz_signature/: small_valid_shape
fuzz/fuzz_targets/: fuzz_decrypt.rs  fuzz_envelope.rs  fuzz_extract_sender.rs  fuzz_key_package.rs  fuzz_record.rs  fuzz_revocation.rs  fuzz_rotation.rs  fuzz_signature.rs  fuzz_stream_decrypt.rs
packaging/homebrew/: aegispq.rb
scripts/: bench-vs-age.sh  build-release.sh
