[package]
name = "aegispq-cli"
description = "Command-line interface for AegisPQ encryption platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "aegispq"
path = "src/main.rs"

[dependencies]
aegispq-api.workspace = true
aegispq-core.workspace = true
aegispq-protocol.workspace = true
aegispq-store.workspace = true
clap = { version = "4", features = ["derive", "env"] }
dirs = "6"
hex = "0.4"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zeroize.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
